# ChangeLog for kde-base/kdemultimedia-kfile-plugins
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdemultimedia-kfile-plugins/Attic/ChangeLog,v 1.3 2005/02/27 20:21:34 danarmak Exp $

*kdemultimedia-kfile-plugins-3.4.0_rc1 (27 Feb 2005)

  27 Feb 2005; Dan Armak <danarmak@gentoo.org>
  +kdemultimedia-kfile-plugins-3.4.0_rc1.ebuild:
  Ebuild for 3.4.0 RC1.

*kdemultimedia-kfile-plugins-3.4.0_beta2 (05 Feb 2005)

  05 Feb 2005; Dan Armak <danarmak@gentoo.org>
  +kdemultimedia-kfile-plugins-3.4.0_beta2.ebuild:
  Ebuild for 3.4.0_beta2. Note that beta2 has NOT been released as of this
  date. This ebuild is for inside testing by the KDE team, and is of course
  package.masked.

*kdemultimedia-kfile-plugins-3.4.0_beta1 (15 Jan 2005)

  15 Jan 2005; Dan Armak <danarmak@gentoo.org> +metadata.xml,
  +kdemultimedia-kfile-plugins-3.4.0_beta1.ebuild:
  Adding the split ebuilds to portage. For KDE 3.4, we've created separate
  ebuilds for all the KDE apps.
