@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdemultimedia-kfile-plugins/Attic/kdemultimedia-kfile-plugins-3.4.0_rc1.ebuild,v 1.1 2005/02/27 20:21:34 danarmak Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdemultimedia-kfile-plugins/Attic/kdemultimedia-kfile-plugins-3.4.0_rc1.ebuild,v 1.2 2005/02/28 14:39:21 greg_g Exp $
 
 KMNAME=kdemultimedia
 KMMODULE=kfile-plugins
@@ -10,11 +10,12 @@ inherit kde-meta eutils
 
 DESCRIPTION="kfile plugins from kdemultimedia package"
 KEYWORDS="~x86"
-IUSE="oggvorbis"
+IUSE="oggvorbis theora"
 DEPEND="media-libs/taglib
-	oggvorbis? ( media-libs/libvorbis )"
+	oggvorbis? ( media-libs/libvorbis )
+	theora? ( media-libs/libtheora )"
 
 src_compile() {
-	use oggvorbis	&& myconf="$myconf --with-vorbis=/usr" || myconf="$myconf --without-vorbis"
+	myconf="$myconf $(use_with oggvorbis vorbis)"
 	kde-meta_src_compile
 }
